<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context="com.example.android.watersupply.signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/cus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Customer"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_gravity="center"/>

            <RadioButton
                android:id="@+id/sup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Supplier"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inpuuname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimaryDark">

            <EditText
            android:id="@+id/uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"/>

        </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimaryDark">

            <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputphoneno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimaryDark">
       <EditText
           android:id="@+id/phone_no"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/phoneno"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimaryDark">

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>
         <Button
             android:id="@+id/reg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/signup"
             android:layout_marginTop="20dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/textviewlogin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Go to login"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

    </LinearLayout>



    </LinearLayout>

    </LinearLayout>


